map fix + changing page style

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="./src/index.ts"></script>
+    <link rel="stylesheet" href="./src/index.css">
     <title>Document</title>
 </head>
 <body>
-    <canvas id="game" width="500" height="500"></canvas>
-    <h3>TS Game engine</h3>
-    <p>Game engine build around html canvas and TypeScript</p>
+    <div class="gamewindow">
+        <canvas id="game" width="500" height="500"></canvas>
+    </div>
+
 </body>
 </html>
